--- a/src/shared/components/publications-and-talks-section/index.module.css
+++ b/src/shared/components/publications-and-talks-section/index.module.css
@@ -3,6 +3,7 @@
 
 .container {
     width: 100%;
+    overflow: hidden;
     display: flex;
     justify-content: center;
     background: var(--color-white);
